removed javax.xml.bind dependency